# yt-tts

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  TODO.md  install.sh  pyproject.toml
.claude/skills/forging-plans/: CHANGELOG.md  SKILL.md  examples.md
.claude/skills/forging-prompts/: CHANGELOG.md  SKILL.md  examples.md
.claude/skills/forging-shared/: challenge.md  questionnaire.md  research.md
architect/: STATE.md  alternative-sources.md  prompt.md  research-findings.md  transcript.md
data/: starter_channels.json
skill/: SKILL.md
spikes/: spike_alignment_benchmark.py  spike_fts5.py  spike_json3.py  spike_partial_download.py  spike_phoneme_stitching.py  spike_phoneme_stress_test.py
src/yt_tts/: __init__.py  config.py  exceptions.py  types.py
src/yt_tts/cli/: app.py  output.py
src/yt_tts/cli/commands/: batch.py  cache.py  index.py  synthesize.py
src/yt_tts/core/: align.py  asr.py  benchmark.py  bootstrap.py  cache.py  captions.py  chunk.py  crawl.py  deps.py  extract.py  index.py  pipeline.py  ratelimit.py  search.py  stitch.py  timestamps.py  validate.py
tests/: conftest.py
tests/fixtures/: sample_json3.json
tests/integration/: test_e2e.py
tests/unit/: test_align.py  test_cache.py  test_chunk.py  test_cli_bugs.py  test_extract.py  test_index.py  test_pipeline.py  test_pipeline_verify.py  test_ratelimit.py  test_stitch.py  test_timestamps.py  test_validate.py
website/: flow-field.html  index.html
ytp/: build_final.py  build_v5.py  generate_clips.py  renderer.py  visuals.py
