[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-tts"
version = "0.2.0"
description = "Turn text into audio by stitching YouTube clips"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=0.6.0",
    "tqdm>=4.66.0",
    "faster-whisper>=1.0.0",
    "curl_cffi>=0.14.0",
]

[project.optional-dependencies]
bootstrap = [
    "huggingface-hub>=0.20.0",
    "pyarrow>=21.0.0",
]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.2.0"]

[project.scripts]
yt-tts = "yt_tts.cli.app:main"

[project.urls]
Homepage = "https://github.com/gradigit/yt-tts"
Repository = "https://github.com/gradigit/yt-tts"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_tts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests requiring network access"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
